# MiningPlanningEngineALPHA

./: .gitignore  Cargo.toml  README.md  imgui.ini
projects/: ACAD-MAPEO GEOLOGICO.dxf  TOPO.dxf  parsed_cubes.csv
src/: main.rs
src/assets/custom/meshes/: cube.custom
src/components/: components.rs
src/config/: config.rs  display.ron
src/features/csv/: draw_cube_map.rs
src/features/dxf/: draw_dxf.rs
src/ui/: mod.rs  principal_window_ui.rs
src/world_resources/: camera_controller.rs  debug_lines.rs  mod.rs
